tests/ui/const-generics/mgca/type_const-on-generic_expr-2.stderr
error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic_expr-2.rs:13:59
   |
LL |     type const N1<T>: usize = const { std::mem::size_of::<T>() };
   |                                                           ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic_expr-2.rs:15:52
   |
LL |     type const N2<const I: usize>: usize = const { I + 1 };
   |                                                    ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic_expr-2.rs:17:40
   |
LL |     type const N3: usize = const { 2 & X };
   |                                        ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 3 previous errors

